
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct utsname {char* release; } ;
typedef int FILE ;


 int EOF ;
 int fclose (int *) ;
 int * fopen (char*,char*) ;
 int fscanf (int *,char*,...) ;
 int sprintf (char*,char*,char*) ;
 int strcmp (char*,char*) ;
 scalar_t__ strncmp (char*,char*,int) ;
 char* strrchr (char*,char) ;
 scalar_t__ strstr (char*,char*) ;
 int uname (struct utsname*) ;

unsigned long
get_kernel_symbol(char *name)
{
 FILE *f;
 unsigned long addr;
 struct utsname ver;
 char dummy, sname[512];
 int ret, rep = 0, oldstyle = 0;

 f = fopen("/proc/kallsyms", "r");
 if (f == ((void*)0)) {
  f = fopen("/proc/ksyms", "r");
  if (f == ((void*)0)) {
   goto fallback;
  }
  oldstyle = 1;
 }

repeat:
 ret = 0;
 while(ret != EOF) {
  if (!oldstyle) {
   ret = fscanf(f, "%p %c %s\n", (void **)&addr, &dummy, sname);
  } else {
   ret = fscanf(f, "%p %s\n", (void **)&addr, sname);
   if (ret == 2) {
    char *p;
    if (strstr(sname, "_O/") || strstr(sname, "_S.")) {
     continue;
    }
    p = strrchr(sname, '_');
    if (p > ((char *)sname + 5) && !strncmp(p - 3, "smp", 3)) {
     p = p - 4;
     while (p > (char *)sname && *(p - 1) == '_') {
      p--;
     }
     *p = '\0';
    }
   }
  }
  if (ret == 0) {
   fscanf(f, "%s\n", sname);
   continue;
  }
  if (!strcmp(name, sname)) {
   fclose(f);
   return addr;
  }
 }

 fclose(f);
 if (rep) {
  return 0;
 }
fallback:
 uname(&ver);
 if (strncmp(ver.release, "2.6", 3)) {
  oldstyle = 1;
 }
 sprintf(sname, "/boot/System.map-%s", ver.release);
 f = fopen(sname, "r");
 if (f == ((void*)0)) {
  return 0;
 }
 rep = 1;
 goto repeat;
}
